minggu-10/src/psycopg2-RunTheCode.txt
zargiteddy@shield:~$ export DATABASE_URL="{postgresql://raden:PASSWORD@free-tier8.aws-ap-southeast-1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full&options=--cluster=plains-sheep-1769}"

zargiteddy@shield:~$ cd hello-world-python-psycopg2
zargiteddy@shield:~/hello-world-python-psycopg2$ python example.py
  File "example.py", line 43
    print(f"Balances at {time.asctime()}:")
                                         ^
SyntaxError: invalid syntax